modif alert mdp

--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,9 @@
         <p class="mt-4 text-muted text-center">© 2024–2025</p>
     </form>
 
+    <!-- js pour msg d'alerte -->
+    <script src="assets/js/login.js"></script>
+    <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-whnZFKvc4YBmTfZzE/OMlP3DZ6ld03z/lNd4x5dS/OtE2V4Z3mcnSv4uNQ5Z2X+U"
         crossorigin="anonymous"></script>
